--- a/qmmhjump.html
+++ b/qmmhjump.html
@@ -177,6 +177,7 @@
         
         function backReLoad() {
             $("#toApp").attr("src", "allfreeapp://app?callback=backreload");
+            $("#toApp").attr("src", "allfreeapp://goto?page=search");
         }
 
 
@@ -248,14 +249,14 @@
 <a class="btn" href="javascript:usersignededit()">编辑签名</a><br/>
 <a class="btn" href="javascript:welfarecenter()">福利中心</a><br/>
 <a class="btn" href="javascript:cash()">提现</a><br/>
-<a class="btn" href="javascript:invitefrienddialog()">邀请好友弹窗</a><br/>
+<a class="btn" href="javascript:invitefrienddialog()">邀请好友弹窗</a><br/><br/>
 
 <a class="btn" href="javascript:fullscreen()">全屏</a><br/>
 <a class="btn" href="javascript:normalscreen()">非全屏</a><br/>
-<a class="btn" href="javascript:closepage()">退出</a><br/><br/>
+<a class="btn" href="javascript:closepage()">退出当前页面</a><br/>
 <a class="btn" href="javascript:nopull()">不允许下拉</a><br/>
-<a class="btn" href="javascript:backReLoad()">返回界面刷新页面</a><br/>
-<a class="btn" href="javascript:backRefresh()">进入搜索也,返回界面调用js中的onBackRefresh方法</a><br/>
+<a class="btn" href="javascript:backReLoad()">进入搜索页,返回时刷新页面</a><br/>
+<a class="btn" href="javascript:backRefresh()">进入搜索页,返回时调用javascript:onBackRefresh()</a><br/>
 <a class="btn" href="javascript:nosharebtn()">隐藏分享按钮</a><br/>
 <a class="btn" href="javascript:showsharebtn()">显示分享按钮</a><br/>
 
