--- a/qmmhjump.html
+++ b/qmmhjump.html
@@ -17,6 +17,9 @@
 
         });
 
+        function getApp() {
+            return $("#toApp")
+        }
 
         function webtoapp() {
             $("#toApp").attr("src", "allfreeapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Fqmmhjump.html");
@@ -177,15 +180,20 @@
         
         function backReLoad() {
 
-            $("#toApp").attr("src", "allfreeapp://goto?page=search");
             $("#toApp").attr("src", "allfreeapp://app?callback=backreload");
+            setTimeout(function () {
+                $("#toApp").attr("src", "allfreeapp://goto?page=search");
+            },1000)
         }
 
 
         function backRefresh() {
-
-            $("#toApp").attr("src", "allfreeapp://goto?page=search");
             $("#toApp").attr("src", "allfreeapp://app?callback=backrefresh");
+
+            setTimeout(function () {
+                $("#toApp").attr("src", "allfreeapp://goto?page=search");
+            },1000)
+
         }
 
         function closepage() {
