--- a/zymkjump.html
+++ b/zymkjump.html
@@ -133,6 +133,33 @@
             $("#toApp").attr("src", "zymkapp://goto?page=qrcode");
         }
 
+        function shieldcomic() {
+            $("#toApp").attr("src", "zymkapp://goto?page=shieldcomic");
+        }
+        function vipdetail() {
+            $("#toApp").attr("src", "zymkapp://goto?page=vipdetail");
+        }
+        function accountdetail() {
+            $("#toApp").attr("src", "zymkapp://goto?page=accountdetail");
+        }
+        function coindetail() {
+            $("#toApp").attr("src", "zymkapp://goto?page=coindetail");
+        }
+        function fans() {
+            $("#toApp").attr("src", "zymkapp://goto?page=fans");
+        }
+        function follow() {
+            $("#toApp").attr("src", "zymkapp://goto?page=follow");
+        }
+        function dynamic() {
+            $("#toApp").attr("src", "zymkapp://goto?page=dynamic");
+        }
+        function userinfoedit() {
+            $("#toApp").attr("src", "zymkapp://goto?page=userinfoedit");
+        }
+        function myuserinfo() {
+            $("#toApp").attr("src", "zymkapp://goto?page=myuserinfo");
+        }
 
 
 
@@ -257,7 +284,19 @@
 <a class="btn" href="javascript:myaccout()"> 我的账户</a><br/>
 <a class="btn" href="javascript:recommendticketdetail()"> 推荐票明细</a><br/>
 <a class="btn" href="javascript:monthticketdetail()"> 月票明细</a><br/>
-<a class="btn" href="javascript:qrcode()"> 扫描二维码</a><br/><br/>
+<a class="btn" href="javascript:qrcode()"> 扫描二维码</a><br/>
+<a class="btn" href="javascript:shieldcomic()">需付费作品列表</a><br/>
+<a class="btn" href="javascript:vipdetail()">vip详情页</a><br/>
+<a class="btn" href="javascript:accountdetail()">账户详情</a><br/>
+<a class="btn" href="javascript:coindetail()">金币详情</a><br/>
+<a class="btn" href="javascript:fans()">我的粉丝</a><br/>
+<a class="btn" href="javascript:follow()">我的关注</a><br/>
+<a class="btn" href="javascript:dynamic()">我的动态</a><br/>
+<a class="btn" href="javascript:userinfoedit()">编辑用户资料</a><br/>
+<a class="btn" href="javascript:myuserinfo()">我的个人主页</a><br/>
+
+
+<br/>
 
 
 <a class="btn" href="javascript:getuser()">获取用户信息</a><br/>
