--- a/zymkjump.html
+++ b/zymkjump.html
@@ -114,7 +114,7 @@
         }
 
         function communityarticle() {
-            $("#toApp").attr("src", "zymkapp://goto?page=communitycircle&star_id=17&satellite_id=198426");
+            $("#toApp").attr("src", "zymkapp://goto?page=communityarticle&star_id=17&satellite_id=198426");
         }
         function sign() {
             $("#toApp").attr("src", "zymkapp://goto?page=sign");
@@ -157,8 +157,8 @@
         function userinfoedit() {
             $("#toApp").attr("src", "zymkapp://goto?page=userinfoedit");
         }
-        function myuserinfo() {
-            $("#toApp").attr("src", "zymkapp://goto?page=myuserinfo");
+        function myhome() {
+            $("#toApp").attr("src", "zymkapp://goto?page=myhome");
         }
 
 
@@ -293,7 +293,7 @@
 <a class="btn" href="javascript:follow()">我的关注</a><br/>
 <a class="btn" href="javascript:dynamic()">我的动态</a><br/>
 <a class="btn" href="javascript:userinfoedit()">编辑用户资料</a><br/>
-<a class="btn" href="javascript:myuserinfo()">我的个人主页</a><br/>
+<a class="btn" href="javascript:myhome()">我的个人主页</a><br/>
 
 
 <br/>
