--- a/zymkjump.html
+++ b/zymkjump.html
@@ -114,7 +114,7 @@
         }
 
         function communityarticle() {
-            $("#toApp").attr("src", "zymkapp://goto?page=communityarticle&star_id=17&satellite_id=198426");
+            $("#toApp").attr("src", "zymkapp://goto?page=communityarticle&star_id=17&satellite_id=7374373");
         }
         function sign() {
             $("#toApp").attr("src", "zymkapp://goto?page=sign");
