--- a/zzydjump.html
+++ b/zzydjump.html
@@ -22,81 +22,81 @@
         }
 
         function webtoapp() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Fzzydjump.html");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Fzzydjump.html");
         }
 
         function index() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=index");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=index");
         }
 
 
         function novelTab0() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novel&tab=0");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novel&tab=0");
 
         }
 
 
         function novelTab1() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novel&tab=1");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novel&tab=1");
 
         }
 
 
 
         function mine() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelmine");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelmine");
 
         }
 
         function shelves() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelshelves");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelshelves");
 
         }
         function novelrank() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelrank");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelrank");
 
         }
         function novelclassify() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelclassify");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelclassify");
 
         }
         function noveldetail() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=noveldetail&novel_id=50004114");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=noveldetail&novel_id=50004114");
 
         }
         function novelRead() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=noveldetail&novel_id=50004114&novel_chapterid=51330571");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=noveldetail&novel_id=50004114&novel_chapterid=51330571");
 
         }
         function novelcomment() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelcomment&novel_id=50004114&novel_name=我爱你");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelcomment&novel_id=50004114&novel_name=我爱你");
 
         }
         function novelbook() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelbook&novel_bookid=157");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelbook&novel_bookid=157");
 
         }
         function novelsearch() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelsearch");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelsearch");
 
         }
         function novelrecent() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelrecent");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelrecent");
 
         }
         function novelfeedback() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelfeedback");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelfeedback");
 
         }
         function novelsetup() {
-            $("#toApp").attr("src", "freenovelapp://goto?page=novelsetup");
+            $("#toApp").attr("src", "tfreenovelapp://goto?page=novelsetup");
 
         }
 
 
         function getuser() {
             //从其它页面回来后,调用用户信息
-            $("#toApp").attr("src", "freenovelapp://getuser?callback=showuser");
+            $("#toApp").attr("src", "tfreenovelapp://getuser?callback=showuser");
         }
 
         function showuser(data) {
@@ -109,49 +109,49 @@
 
         function onBackRefresh() {
             //从其它页面回来后,调用用户信息
-            $("#toApp").attr("src", "freenovelapp://getuser?callback=showuser");
+            $("#toApp").attr("src", "tfreenovelapp://getuser?callback=showuser");
         }
 
         function backReLoad() {
 
-            $("#toApp").attr("src", "freenovelapp://app?callback=backreload");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=backreload");
             setTimeout(function () {
-                $("#toApp").attr("src", "freenovelapp://goto?page=search");
+                $("#toApp").attr("src", "tfreenovelapp://goto?page=search");
             },10)
         }
 
 
         function backRefresh() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=backrefresh");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=backrefresh");
 
             setTimeout(function () {
-                $("#toApp").attr("src", "freenovelapp://goto?page=search");
+                $("#toApp").attr("src", "tfreenovelapp://goto?page=search");
             },10)
 
         }
 
         function closepage() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=closepage");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=closepage");
         }
 
 
         function fullscreen() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=fullscreen");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=fullscreen");
         }
 
         function normalscreen() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=normalscreen");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=normalscreen");
         }
 
         function nopull() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=nopull");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=nopull");
         }
 
         function nosharebtn() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=nosharebtn");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=nosharebtn");
         }
         function showsharebtn() {
-            $("#toApp").attr("src", "freenovelapp://app?callback=showsharebtn");
+            $("#toApp").attr("src", "tfreenovelapp://app?callback=showsharebtn");
         }
 
     </script>
