--- a/zzydjump.html
+++ b/zzydjump.html
@@ -41,6 +41,11 @@
 
         }
 
+        function novelTab2() {
+            $("#toApp").attr("src", "freenovelapp://goto?page=novel&tab=2");
+
+        }
+
 
 
         function mine() {
