--- a/zzydjump.html
+++ b/zzydjump.html
@@ -97,6 +97,10 @@
             $("#toApp").attr("src", "freenovelapp://goto?page=novelsetup");
 
         }
+        function novellogin() {
+            $("#toApp").attr("src", "freenovelapp://goto?page=novellogin");
+
+        }
 
 
         function getuser() {
@@ -187,6 +191,7 @@
 <a class="btn" href="javascript:novelrecent()"> 最近阅读</a><br/>
 <a class="btn" href="javascript:novelfeedback()"> 反馈</a><br/>
 <a class="btn" href="javascript:novelsetup()"> 设置</a><br/><br/>
+<a class="btn" href="javascript:novellogin()"> 登录</a><br/><br/>
 
 
 
