--- a/zzydjump.html
+++ b/zzydjump.html
@@ -125,7 +125,7 @@
 
             $("#toApp").attr("src", "freenovelapp://app?callback=backreload");
             setTimeout(function () {
-                $("#toApp").attr("src", "freenovelapp://goto?page=search");
+                $("#toApp").attr("src", "freenovelapp://goto?page=novelsearch");
             },10)
         }
 
@@ -134,7 +134,7 @@
             $("#toApp").attr("src", "freenovelapp://app?callback=backrefresh");
 
             setTimeout(function () {
-                $("#toApp").attr("src", "freenovelapp://goto?page=search");
+                $("#toApp").attr("src", "freenovelapp://goto?page=novelsearch");
             },10)
 
         }
