--- a/testjump.html
+++ b/testjump.html
@@ -473,6 +473,10 @@
             $("#toApp").attr("src", "tkanmanapp://share?title=hello&link=http%3A%2F%2Fwww.baidu.com&content=%E5%88%86%E4%BA%AB%E6%96%87%E5%AD%97&image=http%3A%2F%2Fwww.kanman.com%2Fstatic%2Fkanman_logo.png&callback=sharecallback&wxMiniProgramUserName=gh_b446aa405cee&qqMiniProgramUserName=1109891985&wxMiniProgramPath=pages%2Fread%2Fread%3FcomicId%3D107961%26chapterId%3D1694808&qqMiniProgramPath=pages%2Fread%2Fread%3FcomicId%3D107961%26chapterId%3D1694808");
         }
 
+        function savepic() {
+            $("#toApp").attr("src", "tkanmanapp://savepic?url=https%3A%2F%2Fmhpic.dm300.com%2Fcomic%2FB%2F%25E5%25BF%2585%25E8%2583%259C%25E8%2587%25B3%25E5%25B0%258A%2F%25E4%25BA%25BA%25E7%2589%25A9%25E4%25BB%258B%25E7%25BB%258DF0_297728%2F1.jpg-kmh.middle.webp");
+        }
+
     </script>
 </head>
 <body>
@@ -603,6 +607,7 @@
 <a class="btn" href="javascript:nosharebtn()">隐藏分享按钮</a><br/>
 <a class="btn" href="javascript:showsharebtn()">显示分享按钮</a><br/>
 <a class="btn" href="javascript:share()">分享</a><br/>
+<a class="btn" href="javascript:savepic()">保存图片</a><br/>
 
 <a class="btn" href="tkanmanapp://goto?page=freecard&card_type=3&type=5">tkanmanapp://goto?page=freecard&card_type=3&type=5</a><br/>
 <a class="btn" href="tkanmanapp://goto?page=freecard&card_type=3&type=3">tkanmanapp://goto?page=freecard&card_type=3&type=3</a><br/>
