--- a/testjump.html
+++ b/testjump.html
@@ -282,6 +282,13 @@
         function skindetail() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=skindetail&theme_id=9");
         }
+        function voice_main() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=voice_main");
+        }
+
+        function voice_recharge() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=voice_recharge");
+        }
 
         function novel() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novel");
@@ -561,6 +568,8 @@
 <a class="btn" href="javascript:doclock()">打卡</a><br/>
 <a class="btn" href="javascript:skinstore()">皮肤商店</a><br/>
 <a class="btn" href="javascript:skindetail()">皮肤详情</a><br/>
+<a class="btn" href="javascript:voice_main()">语音主页</a><br/>
+<a class="btn" href="javascript:voice_recharge()">语音钱包页面</a><br/>
 
 <br/><br/>
 <a class="btn" href="javascript:novel()"> 小说主页</a><br/>
