--- a/testjump.html
+++ b/testjump.html
@@ -22,6 +22,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftestjump.html");
         }
 
+        function mhttoapp() {
+            $("#toApp").attr("src", "tmanhuataiapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftestjump.html");
+        }
+
         function index() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=index");
         }
@@ -496,6 +500,7 @@
 
 
 <a class="btn" href="javascript:webtoapp()">app内打开此页面</a><br/><br/>
+<a class="btn" href="javascript:mhttoapp()">mht内打开此页面</a><br/><br/>
 
 
 <a class="btn" href="javascript:index()"> 首页</a><br/>
