--- a/testjump.html
+++ b/testjump.html
@@ -264,6 +264,15 @@
         function vipcard() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=vipcard&card_type=4");
         }
+        function vipcard1() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=vipcard&card_type=4&type=2");
+        }
+        function vipcard2() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=vipcard&card_type=4&type=22");
+        }
+        function vipcard3() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=vipcard&card_type=4&type=23");
+        }
 
         function ciyuanexchange() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=ciyuanexchange&card_type=2001");
@@ -565,6 +574,9 @@
 <a class="btn" href="javascript:freecard3()">跳转到打折卡</a><br/>
 <a class="btn" href="javascript:clearcard()">跳转到净化卡</a><br/>
 <a class="btn" href="javascript:vipcard()">跳转到贵宾卡</a><br/>
+<a class="btn" href="javascript:vipcard1()">跳转到贵宾卡1</a><br/>
+<a class="btn" href="javascript:vipcard2()">跳转到贵宾卡2</a><br/>
+<a class="btn" href="javascript:vipcard3()">跳转到贵宾卡3</a><br/>
 <a class="btn" href="javascript:ciyuanexchange()">次元兑换</a><br/>
 <a class="btn" href="javascript:giftpackage()">跳转到礼包</a><br/>
 
