--- a/testjump.html
+++ b/testjump.html
@@ -302,6 +302,12 @@
         function voice_recharge() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=voice_recharge");
         }
+        function drawpreemptivecoupons() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=drawpreemptivecoupons");
+        }
+        function preemptivecomic() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=preemptivecomic");
+        }
 
         function novel() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=novel");
@@ -587,6 +593,8 @@
 <a class="btn" href="javascript:skindetail()">皮肤详情</a><br/>
 <a class="btn" href="javascript:voice_main()">语音主页</a><br/>
 <a class="btn" href="javascript:voice_recharge()">语音钱包页面</a><br/>
+<a class="btn" href="javascript:drawpreemptivecoupons()">抢先券专区</a><br/>
+<a class="btn" href="javascript:preemptivecomic()">抢先券漫画列表</a><br/>
 
 <br/><br/>
 <a class="btn" href="javascript:novel()"> 小说主页</a><br/>
