--- a/test_zy.html
+++ b/test_zy.html
@@ -89,7 +89,7 @@
         }
 
         function communityarticle() {
-            $("#toApp").attr("src", "zymkapp://goto?page=communityarticle&satellite_id=164702&star_id=1");
+            $("#toApp").attr("src", "zymkapp://goto?page=communityarticle&satellite_id=7661184&star_id=19");
         }
 
 
