--- a/testjump.html
+++ b/testjump.html
@@ -303,7 +303,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=voice_recharge");
         }
         function drawpreemptivecoupons() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=drawpreemptivecoupons");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=drawpreemptivecoupons&group_id=1");
+        }
+        function lingfustore() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=lingfustore&group_id=1");
         }
         function preemptivecomic() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=preemptivecomic");
@@ -594,6 +597,7 @@
 <a class="btn" href="javascript:voice_main()">语音主页</a><br/>
 <a class="btn" href="javascript:voice_recharge()">语音钱包页面</a><br/>
 <a class="btn" href="javascript:drawpreemptivecoupons()">抢先券专区</a><br/>
+<a class="btn" href="javascript:lingfustore()">灵符商店</a><br/>
 <a class="btn" href="javascript:preemptivecomic()">抢先券漫画列表</a><br/>
 
 <br/><br/>
