--- a/testjump.html
+++ b/testjump.html
@@ -559,7 +559,7 @@
 <a class="btn" href="javascript:bindPhone()"> 绑定手机</a><br/>
 <a class="btn" href="javascript:setup()"> 设置</a><br/>
 <a class="btn" href="javascript:feedback()"> 反馈</a><br/>
-<a class="btn" href="javascript:login()"> 登录</a><br/>
+<a class="btn" href="javascript:gotoLogin()"> 登录</a><br/>
 <a class="btn" href="javascript:game()"> 游戏中心</a><br/>
 <a class="btn" href="javascript:welfare()"> 福利中心</a><br/>
 <a class="btn" href="javascript:rechargevip()"> 开通vip</a><br/>
