--- a/testjump.html
+++ b/testjump.html
@@ -473,6 +473,7 @@
 
         function showuser(data) {
             //获取到app传过来的用户信息
+            alert(JSON.stringify(data));
         }
 
         function gotoLogin() {
