--- a/testjump.html
+++ b/testjump.html
@@ -461,6 +461,10 @@
             $("#toApp").attr("src", "tcattoonapp://goto?page=dir&comic_id=2");
         }
 
+        function zymklogin() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=zymklogin&token=1a4028667e7b05fe0fcf9f28cc98d2d882a3a9faa6bbe9149e327a6e3a43121b790d996d976616494166a30489c40f9687ddd40337c9c427ae786f5edf021f42877610d3643178be9cf22b74600e2ac0");
+        }
+
 
         function advCallback() {
             alert("广告观看完成");
@@ -656,6 +660,7 @@
 <a class="btn" href="javascript:showsharebtn()">显示分享按钮</a><br/>
 <a class="btn" href="javascript:share()">分享</a><br/>
 <a class="btn" href="javascript:savepic()">保存图片</a><br/>
+<a class="btn" href="javascript:zymklogin()">使用知音漫客登录</a><br/>
 
 <a class="btn" href="tkanmanapp://goto?page=freecard&card_type=3&type=5">tkanmanapp://goto?page=freecard&card_type=3&type=5</a><br/>
 <a class="btn" href="tkanmanapp://goto?page=freecard&card_type=3&type=3">tkanmanapp://goto?page=freecard&card_type=3&type=3</a><br/>
