微信皮肤测试

--- a/wx_skin.html
+++ b/wx_skin.html
@@ -78,7 +78,10 @@
         }
         document.addEventListener("visibilitychange", handleVisibilityChange, false);
 
-        nosharebtn();
+        window.onload = function () {
+            nosharebtn();
+        }
+
 
     </script>
 </head>
