微信皮肤测试

--- a/testjump.html
+++ b/testjump.html
@@ -466,7 +466,7 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=luckystardetail&id=6");
         }
         function luckystardetailother() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=luckystardetail&id=6");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=luckystardetailother&id=6");
         }
 
         function cattoon() {
