--- a/testjump.html
+++ b/testjump.html
@@ -19,11 +19,11 @@
 
 
         function webtoapp() {
-            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftestjump.html");
+            $("#toApp").attr("src", "tkanmanapp://goto?page=web&url="+encodeURIComponent(window.location.href));
         }
 
         function mhttoapp() {
-            $("#toApp").attr("src", "tmanhuataiapp://goto?page=web&url=https%3A%2F%2Fcanyinghao2.github.io%2Fmanhua%2Ftestjump.html");
+            $("#toApp").attr("src", "tmanhuataiapp://goto?page=web&url="+encodeURIComponent(window.location.href));
         }
 
         function index() {
