--- a/testjump.html
+++ b/testjump.html
@@ -150,6 +150,9 @@
         function coindetail() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=coindetail");
         }
+        function starcoindetail() {
+            $("#toApp").attr("src", "tkanmanapp://goto?page=starcoindetail");
+        }
         function recommendticketdetail() {
             $("#toApp").attr("src", "tkanmanapp://goto?page=recommendticketdetail");
         }
@@ -570,6 +573,7 @@
 <a class="btn" href="javascript:fans()"> 粉丝</a><br/>
 <a class="btn" href="javascript:diamonddetail()"> 钻石明细</a><br/>
 <a class="btn" href="javascript:coindetail()"> 金币明细</a><br/>
+<a class="btn" href="javascript:starcoindetail()"> 星币明细</a><br/>
 <a class="btn" href="javascript:recommendticketdetail()"> 推荐票明细</a><br/>
 <a class="btn" href="javascript:monthticketdetail()"> 月票明细</a><br/>
 <a class="btn" href="javascript:vipdetail()"> VIP明细</a><br/>
