--- a/testjump.html
+++ b/testjump.html
@@ -701,6 +701,8 @@
 <a class="btn" href="javascript:luckystardetail()"> 我的福星详情页</a><br/>
 <a class="btn" href="javascript:luckystardetailother()"> 他人的福星详情页</a><br/>
 
+<a class="btn" href="https://cashin.321mh.com/v1/autologin?type={type}&openid={openid}&productname={productname}&platformname={platformname}"> 兑吧</a><br/>
+
 
 </body>
 
