--- a/testjump.html
+++ b/testjump.html
@@ -472,6 +472,10 @@
             $("#toApp").attr("src", "tkanmanapp://goto?page=luckystardetailother&id=6");
         }
 
+        function addcollection() {
+            $("#toApp").attr("src", "tkanmanapp://addcollection?comic_id=107751&comic_name=修罗剑尊");
+        }
+
         function cattoon() {
             $("#toApp").attr("src", "tcattoonapp://goto?page=dir&comic_id=2");
         }
@@ -700,6 +704,7 @@
 <a class="btn" href="javascript:luckystarmain()"> 福星专区</a><br/>
 <a class="btn" href="javascript:luckystardetail()"> 我的福星详情页</a><br/>
 <a class="btn" href="javascript:luckystardetailother()"> 他人的福星详情页</a><br/>
+<a class="btn" href="javascript:addcollection()"> 收藏修罗剑尊107751</a><br/>
 
 <a class="btn" href="https://cashin.321mh.com/v1/autologin?type={type}&openid={openid}&productname={productname}&platformname={platformname}"> 兑吧</a><br/>
 
